--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-	<title>labuser4</title>
+	<title>labuser4 says hi</title>
 </head>
 <body>
 <font size="12">App deployed on K8s with Jenkins - image APPNAME:BUILD_NUMBER</font>
