--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <font size="12">App deployed on K8s with Jenkins - image APPNAME:BUILD_NUMBER</font>
+<p> hello from Maarten, Xavier, and Berjin </p>
 </body>
 </html>
